# openstack-service-operator

./: .gitignore  Dockerfile  Makefile  PROJECT  README.md  README.rst  go.mod  go.sum  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
api/: errors.go
api/v1alpha1/: endpoint_types.go  groupversion_info.go  service_types.go  zz_generated.deepcopy.go
cmd/: main.go
config/crd/: kustomization.yaml
config/crd/bases/: identity.openstack.org_endpoints.yaml  identity.openstack.org_services.yaml
config/default/: kustomization.yaml
config/manager/: manager.yaml
config/manifests/: kustomization.yaml
config/prometheus/: monitor.yaml
config/rbac/: auth_proxy_client_clusterrole.yaml  auth_proxy_role.yaml  auth_proxy_role_binding.yaml  auth_proxy_service.yaml  endpoint_editor_role.yaml  endpoint_viewer_role.yaml  leader_election_role.yaml  leader_election_role_binding.yaml  role.yaml  role_binding.yaml  service_account.yaml  service_editor_role.yaml  service_viewer_role.yaml
config/samples/: identity_v1alpha1_endpoint.yaml  identity_v1alpha1_service.yaml  kustomization.yaml
deploy/: crd-identity-endpoint.yaml  crd-identity-service.yaml
examples/: identity-endpoint-glance-internal.yaml  identity-service-glance.yaml
hack/: boilerplate.go.txt
internal/cloud/: endpoint.go  service.go
internal/controller/: endpoint_controller.go  endpoint_controller_test.go  service_controller.go  service_controller_test.go  suite_test.go
openstack_service_operator/operators/: common.py
test/e2e/: e2e_suite_test.go  e2e_test.go
test/utils/: utils.go
(+3 files in other folders)
