[metadata]
name = openstack-service-operator
summary = OpenStack Service Operator
description_file =
    README.rst
author = VEXXHOST, Inc.
author_email = support@vexxhost.com
url = https://vexxhost.github.io/openstack-service-operator/
project_urls =
    Bug Tracker = https://github.com/vexxhost/openstack-service-operator/issues
    Documentation = https://vexxhost.github.io/openstack-service-operator/
    Source Code = https://github.com/vexxhost/openstack-service-operator
python_requires = >=3.11
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

# [files]
# packages =
#     pbr
# data_files =
#     etc/pbr = etc/*
#     etc/init =
#         pbr.packaging.conf
#         pbr.version.conf

# [entry_points]
# console_scripts =
#     pbr = pbr.cmd:main
# pbr.config.drivers =
#     plain = pbr.cfg.driver:Plain
